tests/should-fail/export-nonexistent-function.ls
export foo;

bar = 10;
